# webpdf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_CN.md  brew.sh  debian.changelog  debian.control  debian.copyright  debian.rules  vcpkg.json  webpdf.dsc  webpdf.pc  webpdf.rb  webpdf.spec  webpdfConfig.cmake
.github/workflows/: ci.yml  release.yml
cmake/: webpdf.pc.in  webpdfConfig.cmake.in
debian/: changelog  control  copyright  rules
example/: hello.cpp  render_html.cpp  webpdf  webpdf-hello  webpdf-render-html  webpdf.cpp  webpdf_tutorial.html  webpdf_tutorial_en.html
include/webpdf/: gzip.h
ports/webpdf/: portfile.cmake  vcpkg.json
src/: parsesvg.cpp
